Added new stuff.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1> Hello Coursera! New stuff added </h1>
     <h1> More new stuff added </h1>
+    <h2> Marc's new stuff</h2>
   </body>
 </html>
