--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1> Hello Coursera! New stuff added </h1>
     <h1> More new stuff added </h1>
     <h1> Marc's new stuff</h1>
+    <h1> Marc's new stuff 2</h1>
   </body>
 </html>
