--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1> More new stuff added </h1>
     <h1> Marc's new stuff</h1>
     <h1> Marc's new stuff 2</h1>
+    <h2> h2 stuff</h2>
   </body>
 </html>
